began creating the summerIsOver program for visualizer.  also separated out JS into multiple files to keep things organized

--- a/Soundcloud_test_visualizer.html
+++ b/Soundcloud_test_visualizer.html
@@ -21,6 +21,7 @@
 <body>
 
 <span id="counter_debug">1</span>
+<span id="infinite_counter_debug">1</span>
 
 <div id="soundcloud_attribution_container">
     <div id="soundcloud_attribution">
@@ -38,7 +39,7 @@
 
 <div class="centered_div" id="visualizer_space">
 
-    <img src="https://danthemantrivia.files.wordpress.com/2010/09/rubiks-cube.jpg" id="image">
+    <img src="https://img0.etsystatic.com/000/0/6604604/il_570xN.290724650.jpg" id="image">
 
     <div class="rectangle" id="rectangle1"></div>
     <div class="rectangle" id="rectangle2"></div>
@@ -50,7 +51,6 @@
     <div class="rectangle" id="rectangle8"></div>
 
     <div class="rectangle" id="rectangle9"></div>
-
 </div>
 
 <br>
@@ -112,15 +112,13 @@
         <div style="left: 96.875%; height: 0px;"></div>
     </div>
 
-	<p class="showIfNoApi">Unable to run this Web Audio API example. <a href="http://caniuse.com/#feat=audio-api">Check browser support</a></p>
-	<img class="showIfNoApi" src="./Test_audio_files/post-2013-02-19-screenshot.png">
 </div>
 
 <script type="text/javascript" src="sound_cloud_visualizer.js"> </script>
+<script type="text/javascript" src="visualizerLibrary.js"> </script>
+<script type="text/javascript" src="summerIsOverVisualizer.js"> </script>
 
 </div>
-
-Testing version
 
 </body>
 </html>
