--- a/Soundcloud_test_visualizer.html
+++ b/Soundcloud_test_visualizer.html
@@ -22,6 +22,7 @@
 
 <span id="counter_debug">1</span>
 <span id="infinite_counter_debug">1</span>
+<span id="current_time">0</span>
 
 <div id="soundcloud_attribution_container">
     <div id="soundcloud_attribution">
