added randomize() function in order to cycle thru animations randomly.  also enhanced invertImageColors function so that it inverts the colors of the currently showed image

--- a/Soundcloud_test_visualizer.html
+++ b/Soundcloud_test_visualizer.html
@@ -40,7 +40,7 @@
 
 <div class="centered_div" id="visualizer_space">
 
-    <img src="https://img0.etsystatic.com/000/0/6604604/il_570xN.290724650.jpg" class="visual_image" id="image">
+    <img src="https://img0.etsystatic.com/000/0/6604604/il_570xN.290724650.jpg" class="visual_image" id="image1">
 
     <div class="rectangle" id="rectangle1"></div>
     <div class="rectangle" id="rectangle2"></div>
