--- a/Soundcloud_test_visualizer.html
+++ b/Soundcloud_test_visualizer.html
@@ -42,14 +42,14 @@
 
     <img src="https://img0.etsystatic.com/000/0/6604604/il_570xN.290724650.jpg" class="visual_image" id="image1">
 
-    <div class="rectangle" id="rectangle1"></div>
-    <div class="rectangle" id="rectangle2"></div>
-    <div class="rectangle" id="rectangle3"></div>
-    <div class="rectangle" id="rectangle4"></div>
-    <div class="rectangle" id="rectangle5"></div>
-    <div class="rectangle" id="rectangle6"></div>
-    <div class="rectangle" id="rectangle7"></div>
-    <div class="rectangle" id="rectangle8"></div>
+    <div class="rectangle vertical_rectangle" id="rectangle1"></div>
+    <div class="rectangle vertical_rectangle" id="rectangle2"></div>
+    <div class="rectangle vertical_rectangle" id="rectangle3"></div>
+    <div class="rectangle vertical_rectangle" id="rectangle4"></div>
+    <div class="rectangle vertical_rectangle" id="rectangle5"></div>
+    <div class="rectangle vertical_rectangle" id="rectangle6"></div>
+    <div class="rectangle vertical_rectangle" id="rectangle7"></div>
+    <div class="rectangle vertical_rectangle" id="rectangle8"></div>
 
     <div class="rectangle" id="rectangle9"></div>
 </div>
