tweaked visualizer functions a bit and began hard coding the deep end by holy ghost. got first working demo for song through to the 65th beat (where piano first drops)

--- a/Soundcloud_test_visualizer.html
+++ b/Soundcloud_test_visualizer.html
@@ -38,9 +38,17 @@
     </a>
 </div>
 
+
+
+<!--*************************BEGIN VISUALIZER SPACE*************************-->
+
 <div class="centered_div" id="visualizer_space">
-    <img src="https://img0.etsystatic.com/000/0/6604604/il_570xN.290724650.jpg" class="visual_image" id="image1">
+    <img src="" class="visual_image" id="image1">
 </div>
+
+<!--*************************END VISUALIZER SPACE***************************-->
+
+
 
 <br>
 
@@ -105,7 +113,8 @@
 
 <script type="text/javascript" src="sound_cloud_visualizer.js"> </script>
 <script type="text/javascript" src="visualizerLibrary.js"> </script>
-<script type="text/javascript" src="summerIsOverVisualizer.js"> </script>
+<!--<script type="text/javascript" src="summerIsOverVisualizer.js"> </script>-->
+<script type="text/javascript" src="theDeepEnd.js"> </script>
 
 </div>
 
