--- a/Soundcloud_test_visualizer.html
+++ b/Soundcloud_test_visualizer.html
@@ -2,7 +2,9 @@
 <!-- saved from url=http://ianreah.com/2013/02/28/Real-time-analysis-of-streaming-audio-data-with-Web-Audio-API.html -->
 <html><head>
 
-    <title>Visualizer TEST9</title>
+    <meta name=viewport content="width=device-width, initial-scale=1">
+
+    <title>Visualizer Test</title>
 
     <!--Jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -15,106 +17,117 @@
 
     <!--Bootstrap files -->
     <script src="inc/bootstrap.min.js"></script> 
-    <link href="inc/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
    
 </head>
 <body>
 
-<div id="debug_counters">
-    <!--*********DEBUG********-->
-    <span id="counter_debug">1</span>
-    <span id="infinite_counter_debug">1</span>
-    <span id="current_time">0</span>
-</div>
+<div class="container" id="page_container">
 
-
-<div id="soundcloud_attribution_container">
-    <div id="soundcloud_attribution">
-        <span id="soundcloud_title_display">song</span>
-        <br>
-        Uploaded by: 
-        <span id="soundcloud_creator_display">
-            creator
-        </span>
-    </div>
-    <a href="http://www.soundcloud.com/">
-        <img src="inc/powered_by_soundcloud.png">
-    </a>
-</div>
-
-<br>
-
-<div class="centered_div" id="audio_container">
-    <audio id="player" class="hideIfNoApi" controls="controls" src="" crossorigin="anonymous"> </audio>
-</div>
-
-<br>
-
-<div class="centered_div" id="search_form_div">
-    <form id="search_form">
-        <input class="form-control input-lg" id="search_input" name="search_input" type="search" placeholder="song, artist" size="30">
-        <input class="btn btn-default" id="search_form_submit_button" type="submit" value="Search">
-    </form>
-    <br>
-    <div id="search_results_space">
-        <ol class="lead" id="search_results_list">
-        </ol>
-    </div>
-</div>
-
-<br>
-
-<!--*************************BEGIN VISUALIZER SPACE*************************-->
-
-<div class="centered_div" id="visualizer_space">
-    
-</div>
-
-<!--*************************END VISUALIZER SPACE***************************-->
-
-
-<div id="frequency_visualizer_test">
-<!--*********TESTING********-->
-
-    <div id="visualisation" class="hideIfNoApi"> 
-        <div style="left: 0%; height: 0px;"></div>
-        <div style="left: 3.125%; height: 0px;"></div>
-        <div style="left: 6.25%; height: 0px;"></div>
-        <div style="left: 9.375%; height: 0px;"></div>
-        <div style="left: 12.5%; height: 0px;"></div>
-        <div style="left: 15.625%; height: 0px;"></div>
-        <div style="left: 18.75%; height: 0px;"></div>
-        <div style="left: 21.875%; height: 0px;"></div>
-        <div style="left: 25%; height: 0px;"></div>
-        <div style="left: 28.125%; height: 0px;"></div>
-        <div style="left: 31.25%; height: 0px;"></div>
-        <div style="left: 34.375%; height: 0px;"></div>
-        <div style="left: 37.5%; height: 0px;"></div>
-        <div style="left: 40.625%; height: 0px;"></div>
-        <div style="left: 43.75%; height: 0px;"></div>
-        <div style="left: 46.875%; height: 0px;"></div>
-        <div style="left: 50%; height: 0px;"></div>
-        <div style="left: 53.125%; height: 0px;"></div>
-        <div style="left: 56.25%; height: 0px;"></div>
-        <div style="left: 59.375%; height: 0px;"></div>
-        <div style="left: 62.5%; height: 0px;"></div>
-        <div style="left: 65.625%; height: 0px;"></div>
-        <div style="left: 68.75%; height: 0px;"></div>
-        <div style="left: 71.875%; height: 0px;"></div>
-        <div style="left: 75%; height: 0px;"></div>
-        <div style="left: 78.125%; height: 0px;"></div>
-        <div style="left: 81.25%; height: 0px;"></div>
-        <div style="left: 84.375%; height: 0px;"></div>
-        <div style="left: 87.5%; height: 0px;"></div>
-        <div style="left: 90.625%; height: 0px;"></div>
-        <div style="left: 93.75%; height: 0px;"></div>
-        <div style="left: 96.875%; height: 0px;"></div>
+    <div id="debug_counters">
+        <!--*********DEBUG********-->
+        <span id="counter_debug">1</span>
+        <span id="infinite_counter_debug">1</span>
+        <span id="current_time">0</span>
     </div>
 
-</div>
+    <div class="row" id="top_row">
+        <div class="col-sm-7">
+            <div class="centered_div" id="search_form_div">
+                <form id="search_form">
+                    <input class="form-control input-lg" id="search_input" name="search_input" type="search" placeholder="song, artist" size="30">
+                    <input class="btn btn-default" id="search_form_submit_button" type="submit" value="Search">
+                </form>
+                <br>
+                <div id="search_results_space">
+                    <ol class="lead" id="search_results_list">
+                    </ol>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-5">
+            <button class="btn btn-default btn-warning btn-lg" id="audioControl">
+                <span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span>
+                <span id="play_pause">Play</span>
+            </button>
+            <div id="soundcloud_attribution_container">
+                <div id="soundcloud_attribution">
+                    <span id="soundcloud_title_display">song</span>
+                    <br>
+                    Uploaded by: 
+                    <span id="soundcloud_creator_display">
+                        creator
+                    </span>
+                </div>
+                <a href="http://www.soundcloud.com/">
+                    <img id="soundcloud_image" src="inc/powered_by_soundcloud.png">
+                </a>
+            </div>
+        </div>
+    </div>
 
-<script type="text/javascript" src="sound_cloud_visualizer.js"> </script>
-<script type="text/javascript" src="visualizerLibrary.js"> </script>
+
+
+    <!--*************************BEGIN VISUALIZER SPACE*************************-->
+
+    <div class="centered_div" id="visualizer_space">
+        
+    </div>
+
+    <!--*************************END VISUALIZER SPACE***************************-->
+
+
+
+    <div class="centered_div" id="audio_container">
+        <audio id="player" controls="controls" src="" crossorigin="anonymous"> </audio>
+    </div>
+
+
+
+    <div id="frequency_visualizer_test">
+    <!--*********TESTING********-->
+
+        <div id="visualisation" class="hideIfNoApi"> 
+            <div style="left: 0%; height: 0px;"></div>
+            <div style="left: 3.125%; height: 0px;"></div>
+            <div style="left: 6.25%; height: 0px;"></div>
+            <div style="left: 9.375%; height: 0px;"></div>
+            <div style="left: 12.5%; height: 0px;"></div>
+            <div style="left: 15.625%; height: 0px;"></div>
+            <div style="left: 18.75%; height: 0px;"></div>
+            <div style="left: 21.875%; height: 0px;"></div>
+            <div style="left: 25%; height: 0px;"></div>
+            <div style="left: 28.125%; height: 0px;"></div>
+            <div style="left: 31.25%; height: 0px;"></div>
+            <div style="left: 34.375%; height: 0px;"></div>
+            <div style="left: 37.5%; height: 0px;"></div>
+            <div style="left: 40.625%; height: 0px;"></div>
+            <div style="left: 43.75%; height: 0px;"></div>
+            <div style="left: 46.875%; height: 0px;"></div>
+            <div style="left: 50%; height: 0px;"></div>
+            <div style="left: 53.125%; height: 0px;"></div>
+            <div style="left: 56.25%; height: 0px;"></div>
+            <div style="left: 59.375%; height: 0px;"></div>
+            <div style="left: 62.5%; height: 0px;"></div>
+            <div style="left: 65.625%; height: 0px;"></div>
+            <div style="left: 68.75%; height: 0px;"></div>
+            <div style="left: 71.875%; height: 0px;"></div>
+            <div style="left: 75%; height: 0px;"></div>
+            <div style="left: 78.125%; height: 0px;"></div>
+            <div style="left: 81.25%; height: 0px;"></div>
+            <div style="left: 84.375%; height: 0px;"></div>
+            <div style="left: 87.5%; height: 0px;"></div>
+            <div style="left: 90.625%; height: 0px;"></div>
+            <div style="left: 93.75%; height: 0px;"></div>
+            <div style="left: 96.875%; height: 0px;"></div>
+        </div>
+
+    </div>
+
+    <script type="text/javascript" src="sound_cloud_visualizer.js"> </script>
+    <script type="text/javascript" src="visualizerLibrary.js"> </script>
+
+</div> <!--end of container div-->
 
 </body>
 </html>
